MDEV-5260 discovery with sql is too restrictive

allow ENGINE=FOOBAR in the discovering create table statement,
as long as the discovering engine is FOOBAR too